--- a/index.ipynb
+++ b/index.ipynb
@@ -14,7 +14,92 @@
     "\n",
     "Praticar Habilidades:\n",
     "- Engenharia de recursos criativos\n",
-    "- Técnicas de regressão avançadas como floresta aleatória e aumento de gradiente"
+    "- Técnicas de regressão avançadas como floresta aleatória e aumento de gradiente\n",
+    "\n",
+    "## Dados:\n",
+    "\n",
+    "Descrição dos dados:\n",
+    "\n",
+    "SalePrice - preço de venda da propriedade em dólares.\n",
+    "MSSubClass: classe de contrução.\n",
+    "MSZoning: classificação geral de zoneamento.\n",
+    "LotFrontage:Pés lineares de ruas conectados à rua.\n",
+    "LotArea: tamanho do lote em pés quadrados.\n",
+    "Street: tipo de ruas de acesso.\n",
+    "Alley: tipo de acesso ao beco.\n",
+    "LotShape: forma geral da propriedade.\n",
+    "LandContour: planicidade da propriedade.\n",
+    "Utilities: tipo de  utilitários disponíveis.\n",
+    "LotConfig: configuração do lote.\n",
+    "LandSlope: inclinação da propriedade.\n",
+    "Neighborhood: localização física com os limites de Ames. Physical locations within Ames city limits\n",
+    "Condition1: Proximidade da via principal ou da via férrea.\n",
+    "Condition2: Proximidade da via principal ou da via férrea (se houver segundos).\n",
+    "BldgType: tipo de habitação.\n",
+    "HouseStyle: estilo da habitação.\n",
+    "OverallQual:material geral e qualidade de acaabament.\n",
+    "OverallCond: classificação geral de condição.\n",
+    "YearBuilt: data original de construção.\n",
+    "YearRemodAdd: data de reforma.\n",
+    "RoofStyle: tipo de telhado.\n",
+    "RoofMatl: material do telhado.\n",
+    "Exterior1st: cobertura exterior da casa.\n",
+    "Exterior2nd:cobertura exterior da casa (se mais de um material).\n",
+    "MasVnrType: tipo de alvenaria.\n",
+    "MasVnrArea: área de alvenaria em pés quadrados.\n",
+    "ExterQual: qualidade do material exterior.\n",
+    "ExterCond: qualidade do material exterior atual.\n",
+    "Foundation: tipo de fundação.\n",
+    "BsmtQual: altura do poprão.\n",
+    "BsmtCond: condição geral do porão.\n",
+    "BsmtExposure: paredes do porão do nível do jardim.\n",
+    "BsmtFinType1: qualidade da área de finalizada do porão.\n",
+    "BsmtFinSF1: Type 1 finished square feet\n",
+    "BsmtFinType2: Quality of second finished area (if present)\n",
+    "BsmtFinSF2: Type 2 finished square feet\n",
+    "BsmtUnfSF: Unfinished square feet of basement area\n",
+    "TotalBsmtSF: Total square feet of basement area\n",
+    "Heating: Type of heating\n",
+    "HeatingQC: Heating quality and condition\n",
+    "CentralAir: Central air conditioning\n",
+    "Electrical: Electrical system\n",
+    "1stFlrSF: First Floor square feet\n",
+    "2ndFlrSF: Second floor square feet\n",
+    "LowQualFinSF: Low quality finished square feet (all floors)\n",
+    "GrLivArea: Above grade (ground) living area square feet\n",
+    "BsmtFullBath: Basement full bathrooms\n",
+    "BsmtHalfBath: Basement half bathrooms\n",
+    "FullBath: Full bathrooms above grade\n",
+    "HalfBath: Half baths above grade\n",
+    "Bedroom: Number of bedrooms above basement level\n",
+    "Kitchen: Number of kitchens\n",
+    "KitchenQual: Kitchen quality\n",
+    "TotRmsAbvGrd: Total rooms above grade (does not include bathrooms)\n",
+    "Functional: Home functionality rating\n",
+    "Fireplaces: Number of fireplaces\n",
+    "FireplaceQu: Fireplace quality\n",
+    "GarageType: Garage location\n",
+    "GarageYrBlt: Year garage was built\n",
+    "GarageFinish: Interior finish of the garage\n",
+    "GarageCars: Size of garage in car capacity\n",
+    "GarageArea: Size of garage in square feet\n",
+    "GarageQual: Garage quality\n",
+    "GarageCond: Garage condition\n",
+    "PavedDrive: Paved driveway\n",
+    "WoodDeckSF: Wood deck area in square feet\n",
+    "OpenPorchSF: Open porch area in square feet\n",
+    "EnclosedPorch: Enclosed porch area in square feet\n",
+    "3SsnPorch: Three season porch area in square feet\n",
+    "ScreenPorch: Screen porch area in square feet\n",
+    "PoolArea: Pool area in square feet\n",
+    "PoolQC: Pool quality\n",
+    "Fence: Fence quality\n",
+    "MiscFeature: Miscellaneous feature not covered in other categories\n",
+    "MiscVal: $Value of miscellaneous feature\n",
+    "MoSold: Month Sold\n",
+    "YrSold: Year Sold\n",
+    "SaleType: Type of sale\n",
+    "SaleCondition: Condition of sale"
    ]
   },
   {
